--- a/public/style.css
+++ b/public/style.css
@@ -33,12 +33,14 @@ header {
 
 .navbar {
   width: 100%;
-  height: 60px;
+  height: 100px;
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.532);
+  border-radius: 20px;
 }
 .navbar .links {
   display: flex;
@@ -49,10 +51,21 @@ header {
   cursor: pointer;
   display: none;
 }
+.logo {
+  flex-shrink: 0;
+  width: 100px;
+  height: 100%;
+  margin-left: 15px;
+}
+.logo img {
+  max-width: 100px;
+  max-height: 100px;
+}
 .action_btn {
   background-color: purple;
   color: white;
   padding: 0.5rem 1rem;
+  margin-right: 15px;
   border: none;
   outline: none;
   border-radius: 20px;
@@ -83,6 +96,7 @@ header {
 }
 .dropdown_menu.open {
   height: 240px;
+  border: 1px solid purple;
 }
 .dropdown_menu li {
   padding: 0.7rem;
@@ -108,13 +122,21 @@ header {
     display: block;
   }
 }
+@media (max-width: 576px) {
+  .dropdown_menu {
+    left: 2rem;
+    width: unset;
+  }
+}
 
 footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  background-color: #1c1b1bb5 !important;
 }
+/* REG/SIGNUP FORMS */
 #popup-container {
   position: fixed;
   top: 0;
@@ -128,6 +150,9 @@ footer {
   align-items: center;
 }
 .reg_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -140,6 +165,22 @@ footer {
   width: 40vw;
   max-width: 650px;
   justify-content: center;
+}
+.forms-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+.form {
+  width: 45%;
+  padding: 10px;
+}
+.divider {
+  width: 2px;
+  bottom: 2px solid purple;
+  margin: 10px;
+  height: 100%;
 }
 .gender-container {
   justify-content: center;
