--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
   align-items: center; */
   background-image: url(https://wallpaperaccess.com/full/1986686.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-color: black;
 }
 li {
@@ -109,10 +109,43 @@ header {
   display: flex;
   justify-content: center;
 }
+.body-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.mdl-dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.mdl-list {
+  margin-top: 30px;
+  margin-right: 15px;
+  margin-left: 60px;
+  width: 25%;
+  max-width: 600px;
+  background-color: rgba(0, 0, 0, 0.39);
+  backdrop-filter: blur(15px);
+}
+
+.mdl-card {
+  margin-left: 15px;
+  margin-right: 60px;
+  width: 45%;
+  background-color: rgba(0, 0, 0, 0.39);
+  backdrop-filter: blur(15px);
+}
+
 @media (max-width: 992px) {
   .navbar .links,
-  .navbar .action_btn {
-    display: none;
+  .navbar .action_btn,
+  .mdl-list {
+    display: none !important;
   }
 
   .navbar .toggle_btn {
@@ -122,6 +155,7 @@ header {
     display: block;
   }
 }
+
 @media (max-width: 576px) {
   .dropdown_menu {
     left: 2rem;
@@ -157,7 +191,7 @@ footer {
 .reg_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -169,8 +203,8 @@ footer {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   width: 100%;
   max-width: 650px;
-  justify-content: center;
-  z-index: 9999;
+  justify-content: flex-start;
+  right: 30%;
 }
 .forms-container {
   display: flex;
